@@ -1,5 +1,10 @@
 2002-11-25  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/filebuffer.{cc,h} (trigger_preview_line_changed): Rename to
+	queue_preview_line_changed() because that's what it does.
+
+2002-11-25  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/filebuffer.cc (pango_context_changed): Ooops, I accidentally
 	reversed the arguments to Gtk::IconSize::lookup().  Fixed.
 
